# Shader-Cache-Remover

./: .gitignore  README.md  changelog.md  pyproject.toml  remove_shader_cache.py
.github/workflows/: build-windows.yml
docs/: API_REFERENCE.md  DEVELOPER_GUIDE.md  USER_GUIDE.md
shader_cache_remover/: __init__.py  setup.py  test_modular.py
shader_cache_remover/core/: __init__.py  backup_service.py  cancellation.py  cleanup_service.py  deletion_gate.py  detection_service.py  history_service.py  interfaces.py  update_service.py  validation_service.py
shader_cache_remover/core/providers/: __init__.py  amd.py  base.py  browser.py  custom.py  ea.py  epic.py  gog.py  intel.py  nvidia.py  steam.py  system.py  unity.py  unreal.py
shader_cache_remover/gui/: __init__.py  history_dialog.py  main_window.py  restore_dialog.py  schedule_dialog.py  settings_dialog.py
shader_cache_remover/infrastructure/: __init__.py  config_manager.py  filesystem.py  logging_config.py  notifications.py  registry_utils.py  scheduler.py
